--- a/inst/rmarkdown/templates/thesis/template.yaml
+++ b/inst/rmarkdown/templates/thesis/template.yaml
@@ -1,4 +1,3 @@
 name:  Thesis
 description: >
- Template for creating a Senior Thesis at Reed College using R Markdown based on the Reed College LaTeX and Word templates and the R bookdown package.
-
+ Template for creating an Oxford University thesis using R Markdown based on the Oxford University LaTeX and Word templates and the R bookdown package.
